--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
     "require": {
         "php": ">=7.0",
         "ext-bcmath": "*",
-        "guzzlehttp/guzzle": "^7.9"
+        "guzzlehttp/guzzle": "^7.9",
+        "php-di/php-di": "^7.0",
+        "vlucas/phpdotenv": "^5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
